MP Config fixes (#1721)
MP Config implementation to correctly support mutable config sources.